[gd_scene load_steps=4 format=3 uid="uid://rhb6s5wxkfuj"]

[ext_resource type="Script" path="res://Quests/npc_quest.gd" id="1_lrcah"]
[ext_resource type="Texture2D" uid="uid://hmqepyo2pwg8" path="res://Assets/UI Assets/Questboard.png" id="2_1ovft"]
[ext_resource type="FontVariation" uid="uid://ckeuldwvf8rq5" path="res://Assets/Fonts/mcpe_font.tres" id="3_0f578"]

[node name="npc_quest" type="Control"]
z_index = 6
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lrcah")

[node name="quest1" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 384.0
offset_bottom = 192.0
texture = ExtResource("2_1ovft")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Title" type="RichTextLabel" parent="quest1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.375
anchor_top = 0.042
anchor_right = 0.625
anchor_bottom = 0.167
offset_left = -1.52588e-05
offset_top = -0.0640011
offset_bottom = -0.064003
theme_override_fonts/normal_font = ExtResource("3_0f578")
theme_override_fonts/bold_font = ExtResource("3_0f578")
text = "Chico"
scroll_active = false

[node name="Content" type="RichTextLabel" parent="quest1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.042
anchor_top = 0.167
anchor_right = 0.958
anchor_bottom = 0.708
offset_left = -0.128002
offset_top = -0.064003
offset_right = 88.128
offset_bottom = 26.064
scale = Vector2(0.8, 0.8)
theme_override_fonts/normal_font = ExtResource("3_0f578")
theme_override_fonts/bold_font = ExtResource("3_0f578")
text = "Hello my friend, I am the messenger of the village. And for your first quest, the villagers need 5 Chico. Could you do it?"

[node name="accept_btn" type="Button" parent="quest1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.167
anchor_top = 0.75
anchor_right = 0.333
anchor_bottom = 0.9
offset_left = -0.128006
offset_top = -1.52588e-05
offset_right = 16.128
offset_bottom = 7.2
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("3_0f578")
text = "Accept"

[node name="cancel_btn" type="Button" parent="quest1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.667
anchor_top = 0.75
anchor_right = 0.833
anchor_bottom = 0.9
offset_left = -0.128021
offset_top = -1.52588e-05
offset_right = 16.128
offset_bottom = 7.2
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("3_0f578")
text = "Cancel"

[node name="submit_btn" type="Button" parent="quest1"]
visible = false
layout_mode = 0
offset_left = 168.0
offset_top = 144.0
offset_right = 236.0
offset_bottom = 180.0
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("3_0f578")
text = "Submit"

[node name="quest2" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_right = 384.0
offset_bottom = 192.0
texture = ExtResource("2_1ovft")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Title" type="RichTextLabel" parent="quest2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.375
anchor_top = 0.042
anchor_right = 0.625
anchor_bottom = 0.167
offset_left = -128.0
offset_top = -0.0640001
offset_right = 128.0
offset_bottom = -0.0639992
theme_override_fonts/normal_font = ExtResource("3_0f578")
theme_override_fonts/bold_font = ExtResource("3_0f578")
bbcode_enabled = true
text = "[center]In need of Bayabas[/center]"
scroll_active = false

[node name="Content" type="RichTextLabel" parent="quest2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.042
anchor_top = 0.167
anchor_right = 0.958
anchor_bottom = 0.708
offset_left = -0.128002
offset_top = -0.064003
offset_right = 88.128
offset_bottom = 26.064
scale = Vector2(0.8, 0.8)
theme_override_fonts/normal_font = ExtResource("3_0f578")
theme_override_fonts/bold_font = ExtResource("3_0f578")
text = "Thanks for the Calamansi, but the villagers said they need 7 Bayabas this time. Can you help them?"
scroll_active = false

[node name="accept_btn_q2" type="Button" parent="quest2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.167
anchor_top = 0.75
anchor_right = 0.333
anchor_bottom = 0.9
offset_left = -0.128006
offset_top = -1.52588e-05
offset_right = 16.128
offset_bottom = 7.2
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("3_0f578")
text = "Accept"

[node name="cancel_btn_q2" type="Button" parent="quest2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.667
anchor_top = 0.75
anchor_right = 0.833
anchor_bottom = 0.9
offset_left = -0.128021
offset_top = -1.52588e-05
offset_right = 16.128
offset_bottom = 7.2
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("3_0f578")
text = "Cancel"

[node name="submit_btn_q2" type="Button" parent="quest2"]
visible = false
layout_mode = 0
offset_left = 168.0
offset_top = 144.0
offset_right = 236.0
offset_bottom = 180.0
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("3_0f578")
text = "Submit"

[node name="quest3" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_right = 384.0
offset_bottom = 192.0
texture = ExtResource("2_1ovft")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Title" type="RichTextLabel" parent="quest3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.375
anchor_top = 0.042
anchor_right = 0.625
anchor_bottom = 0.167
offset_left = -128.0
offset_top = -0.0640001
offset_right = 128.0
offset_bottom = -0.0639992
theme_override_fonts/normal_font = ExtResource("3_0f578")
theme_override_fonts/bold_font = ExtResource("3_0f578")
bbcode_enabled = true
text = "[center]In need of Bayabas[/center]"
scroll_active = false

[node name="Content" type="RichTextLabel" parent="quest3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.042
anchor_top = 0.167
anchor_right = 0.958
anchor_bottom = 0.708
offset_left = -0.128002
offset_top = -0.064003
offset_right = 88.128
offset_bottom = 26.064
scale = Vector2(0.8, 0.8)
theme_override_fonts/normal_font = ExtResource("3_0f578")
theme_override_fonts/bold_font = ExtResource("3_0f578")
text = "Thank you for the Bayabas. But the Villagers are having cough, can you give me 10 Lagundi?"
scroll_active = false

[node name="accept_btn_q3" type="Button" parent="quest3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.167
anchor_top = 0.75
anchor_right = 0.333
anchor_bottom = 0.9
offset_left = -0.128006
offset_top = -1.52588e-05
offset_right = 16.128
offset_bottom = 7.2
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("3_0f578")
text = "Accept"

[node name="cancel_btn_q3" type="Button" parent="quest3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.667
anchor_top = 0.75
anchor_right = 0.833
anchor_bottom = 0.9
offset_left = -0.128021
offset_top = -1.52588e-05
offset_right = 16.128
offset_bottom = 7.2
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("3_0f578")
text = "Cancel"

[node name="submit_btn_q3" type="Button" parent="quest3"]
visible = false
layout_mode = 0
offset_left = 168.0
offset_top = 144.0
offset_right = 236.0
offset_bottom = 180.0
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("3_0f578")
text = "Submit"

[node name="quest4" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_right = 384.0
offset_bottom = 192.0
texture = ExtResource("2_1ovft")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Title" type="RichTextLabel" parent="quest4"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.375
anchor_top = 0.042
anchor_right = 0.625
anchor_bottom = 0.167
offset_left = -128.0
offset_top = -0.0640001
offset_right = 128.0
offset_bottom = -0.0639992
theme_override_fonts/normal_font = ExtResource("3_0f578")
theme_override_fonts/bold_font = ExtResource("3_0f578")
bbcode_enabled = true
text = "[center]In need of Bayabas[/center]"
scroll_active = false

[node name="Content" type="RichTextLabel" parent="quest4"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.042
anchor_top = 0.167
anchor_right = 0.958
anchor_bottom = 0.708
offset_left = -0.128002
offset_top = -0.064003
offset_right = 88.128
offset_bottom = 26.064
scale = Vector2(0.8, 0.8)
theme_override_fonts/normal_font = ExtResource("3_0f578")
theme_override_fonts/bold_font = ExtResource("3_0f578")
text = "Hello again friend, may you lend 8 Papayas? It is for the children in the village."
scroll_active = false

[node name="accept_btn_q4" type="Button" parent="quest4"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.167
anchor_top = 0.75
anchor_right = 0.333
anchor_bottom = 0.9
offset_left = -0.128006
offset_top = -1.52588e-05
offset_right = 16.128
offset_bottom = 7.2
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("3_0f578")
text = "Accept"

[node name="cancel_btn_q4" type="Button" parent="quest4"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.667
anchor_top = 0.75
anchor_right = 0.833
anchor_bottom = 0.9
offset_left = -0.128021
offset_top = -1.52588e-05
offset_right = 16.128
offset_bottom = 7.2
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("3_0f578")
text = "Cancel"

[node name="submit_btn_q4" type="Button" parent="quest4"]
visible = false
layout_mode = 0
offset_left = 168.0
offset_top = 144.0
offset_right = 236.0
offset_bottom = 180.0
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("3_0f578")
text = "Submit"

[node name="quest5" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_right = 384.0
offset_bottom = 192.0
texture = ExtResource("2_1ovft")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Title" type="RichTextLabel" parent="quest5"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.375
anchor_top = 0.042
anchor_right = 0.625
anchor_bottom = 0.167
offset_left = -128.0
offset_top = -0.0640001
offset_right = 128.0
offset_bottom = -0.0639992
theme_override_fonts/normal_font = ExtResource("3_0f578")
theme_override_fonts/bold_font = ExtResource("3_0f578")
bbcode_enabled = true
text = "[center]In need of Bayabas[/center]"
scroll_active = false

[node name="Content" type="RichTextLabel" parent="quest5"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.042
anchor_top = 0.167
anchor_right = 0.958
anchor_bottom = 0.708
offset_left = -0.128002
offset_top = -0.064003
offset_right = 88.128
offset_bottom = 26.064
scale = Vector2(0.8, 0.8)
theme_override_fonts/normal_font = ExtResource("3_0f578")
theme_override_fonts/bold_font = ExtResource("3_0f578")
text = "Thanks for everything, my friend. But I still need 10 Sambong, can you give it to me?"
scroll_active = false

[node name="accept_btn_q5" type="Button" parent="quest5"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.167
anchor_top = 0.75
anchor_right = 0.333
anchor_bottom = 0.9
offset_left = -0.128006
offset_top = -1.52588e-05
offset_right = 16.128
offset_bottom = 7.2
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("3_0f578")
text = "Accept"

[node name="cancel_btn_q5" type="Button" parent="quest5"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.667
anchor_top = 0.75
anchor_right = 0.833
anchor_bottom = 0.9
offset_left = -0.128021
offset_top = -1.52588e-05
offset_right = 16.128
offset_bottom = 7.2
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("3_0f578")
text = "Cancel"

[node name="submit_btn_q5" type="Button" parent="quest5"]
visible = false
layout_mode = 0
offset_left = 168.0
offset_top = 144.0
offset_right = 236.0
offset_bottom = 180.0
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("3_0f578")
text = "Submit"

[node name="no_quest" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_right = 384.0
offset_bottom = 192.0
texture = ExtResource("2_1ovft")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Title" type="RichTextLabel" parent="no_quest"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.375
anchor_top = 0.042
anchor_right = 0.625
anchor_bottom = 0.167
offset_left = -128.0
offset_top = -0.0640001
offset_right = 128.0
offset_bottom = -0.0639992
theme_override_fonts/normal_font = ExtResource("3_0f578")
theme_override_fonts/bold_font = ExtResource("3_0f578")
bbcode_enabled = true
text = "[center]Merchant[/center]"
scroll_active = false

[node name="Content" type="RichTextLabel" parent="no_quest"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.042
anchor_top = 0.167
anchor_right = 0.958
anchor_bottom = 0.708
offset_left = -0.128002
offset_top = -0.064003
offset_right = 88.128
offset_bottom = 26.064
scale = Vector2(0.8, 0.8)
theme_override_fonts/normal_font = ExtResource("3_0f578")
theme_override_fonts/bold_font = ExtResource("3_0f578")
text = "I have no quests for you right now, come back later."
scroll_active = false

[connection signal="pressed" from="quest1/accept_btn" to="." method="_on_accept_btn_pressed"]
[connection signal="pressed" from="quest1/cancel_btn" to="." method="_on_cancel_btn_pressed"]
[connection signal="pressed" from="quest1/submit_btn" to="." method="_on_submit_btn_pressed"]
[connection signal="pressed" from="quest2/accept_btn_q2" to="." method="_on_accept_btn_q_2_pressed"]
[connection signal="pressed" from="quest2/cancel_btn_q2" to="." method="_on_cancel_btn_q_2_pressed"]
[connection signal="pressed" from="quest2/submit_btn_q2" to="." method="_on_submit_btn_q_2_pressed"]
[connection signal="pressed" from="quest3/accept_btn_q3" to="." method="_on_accept_btn_q_3_pressed"]
[connection signal="pressed" from="quest3/cancel_btn_q3" to="." method="_on_cancel_btn_q_3_pressed"]
[connection signal="pressed" from="quest3/submit_btn_q3" to="." method="_on_submit_btn_q_3_pressed"]
[connection signal="pressed" from="quest4/accept_btn_q4" to="." method="_on_accept_btn_q_4_pressed"]
[connection signal="pressed" from="quest4/cancel_btn_q4" to="." method="_on_cancel_btn_q_4_pressed"]
[connection signal="pressed" from="quest4/submit_btn_q4" to="." method="_on_submit_btn_q_4_pressed"]
[connection signal="pressed" from="quest5/accept_btn_q5" to="." method="_on_accept_btn_q_5_pressed"]
[connection signal="pressed" from="quest5/cancel_btn_q5" to="." method="_on_cancel_btn_q_5_pressed"]
[connection signal="pressed" from="quest5/submit_btn_q5" to="." method="_on_submit_btn_q_5_pressed"]
